--- a/simple-webserver-service.yml
+++ b/simple-webserver-service.yml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: simple-webserver-service
+  name: helloworld-py-service
   labels: 
-    name: simple-webserver-service
-    app: simple-webserver-app
+    name: helloworld-py-service
+    app: helloworld-py-app
 spec:
   type: LoadBalancer
   ports:
   - port:  80
-    targetPort: 80
+    targetPort: 5000
   selector:
-    name: simple-webserver-pod
-    app: simple-webserver-app
+    name: helloworld-py-pod
+    app: helloworld-py-app
