--- a/simple-webserver.yml
+++ b/simple-webserver.yml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: simple-webserver-pod
+  name: helloworld-py-pod
   labels:
-    name: simple-webserver-pod
-    app: simple-webserver-app
-
+    name: helloworld-py-pod
+    app: helloworld-py-app
 spec:
   containers:
-    - name: simple-webserver-pod
-      image: keivan/simple-webserver
+    - name: helloworld-py-pod
+      image: keivan/helloworld-py
       ports:
-      - containerPort:  800
+      - containerPort:  5000
